--- a/html/tables.html
+++ b/html/tables.html
@@ -25,47 +25,61 @@
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-        <h1>Click and edit</h1>
+        <h1>Tables</h1>
 
-        <img class="fr-fir" src="../img/photo1.jpg" alt="Old Clock" width="300"/>Lorem <strong>ipsum</strong> dolor sit amet, consectetur <strong>adipiscing <em>elit.</em> Donec</strong> facilisis diam in odio iaculis blandit. Nunc eu mauris sit amet purus <strong>viverra</strong><em> gravida</em> ut a dui.<br/>
+        <p>In this example you can test advanced actions on custom tables. You can also use the TAB key to navigate through the table if the <a href="https://www.froala.com/wysiwyg-editor/v2.0/docs/options#tabSpaces" title="tabSpaces option" target="_blank">tabSpaces</a> option is set to <code>0</code> (the default value).</p>
 
         <table style="width: 100%;">
           <tr>
-            <td>asdasd</td>
-            <td>
+            <td style="width: 25%;">row 1, col 1</td>
+            <td style="width: 25%;">
               <table style="width: 100%;">
-                <tr><td>asdasd</td><td>asdasdasd</td></tr>
-                <tr><td>asdasd</td><td>asdasdasd</td></tr>
-                <tr><td>asdasd</td><td>asdasdasd</td></tr>
+                <tr><td style="width: 50%;">t2, row 1, col 1</td><td style="width: 50%;">t2, row 1, col 2</td></tr>
+                <tr><td>t2, row 2, col 1</td><td>t2, row 2, col 2</td></tr>
+                <tr><td>t2, row 3, col 1</td><td>t2, row 3, col 2</td></tr>
               </table>
             </td>
-            <td>asdasdasd</td>
-            <td>asdasdasd</td>
+            <td style="width: 25%;">row 1, col 3</td>
+            <td style="width: 25%;">row 1, col 4</td>
           </tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
+          <tr>
+            <td>row 2, col 1</td>
+            <td>row 2, col 2</td>
+            <td>row 2, col 3</td>
+            <td>row 2, col 4</td>
+          </tr>
         </table>
 
-        <table style="width: 100%;">
-          <tr><th>asdasd</th><th>asdasdasd</th><th>asdasdasd</th><th>asdasdasd</th></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-        </table>
+        <br/>
 
         <table style="width: 100%;">
           <tr>
-            <td rowspan="2">a</td>
-            <td>b</td>
-            <td>c</td>
-            <td>d</td>
-            <td>e</td>
-            <td>f</td>
-            <td>g</td>
-            <td>h</td>
-            <td>i</td>
-            <td rowspan="3">j</td>
-            <td>k</td>
+            <th style="width: 25%;">h1</th>
+            <th style="width: 25%;">h2</th>
+            <th style="width: 25%;">h3</th>
+            <th style="width: 25%;">h4</th>
+          </tr>
+          <tr><td>row 1, col 1</td><td>row 1, col 2</td><td>row 1, col 3</td><td>row 1, col 4</td></tr>
+          <tr><td>row 2, col 1</td><td>row 2, col 2</td><td>row 2, col 3</td><td>row 2, col 4</td></tr>
+          <tr><td>row 3, col 1</td><td>row 3, col 2</td><td>row 3, col 3</td><td>row 3, col 4</td></tr>
+          <tr><td>row 4, col 1</td><td>row 4, col 2</td><td>row 4, col 3</td><td>row 4, col 4</td></tr>
+        </table>
+
+        <br/>
+
+        <table style="width: 100%;">
+          <tr>
+            <td rowspan="2" style="width: 9.0909%;">a</td>
+            <td style="width: 9.0909%;">b</td>
+            <td style="width: 9.0909%;">c</td>
+            <td style="width: 9.0909%;">d</td>
+            <td style="width: 9.0909%;">e</td>
+            <td style="width: 9.0909%;">f</td>
+            <td style="width: 9.0909%;">g</td>
+            <td style="width: 9.0909%;">h</td>
+            <td style="width: 9.0909%;">i</td>
+            <td rowspan="3" style="width: 9.0909%;">j</td>
+            <td style="width: 9.0909%;">k</td>
           </tr>
           <tr>
             <td rowspan="2">l</td>
@@ -97,27 +111,7 @@
             <td>zh</td>
           </tr>
         </table>
-
-        Sed dictum dictum tristique. Proin eros turpis, ultricies eu sapien eget, ornare rutrum ipsum. Pellentesque eros nisl, ornare nec ipsum sed, aliquet sollicitudin erat. Nulla tincidunt porta <strong>vehicula.</strong><br/>
-
-
       </div>
-
-      <table style="width: 100%;">
-        <tr>
-          <td>asdasd</td>
-          <td>
-            <table style="width: 100%;">
-              <tr><td>asdasd</td><td>asdasdasd</td></tr>
-              <tr><td>asdasd</td><td>asdasdasd</td></tr>
-              <tr><td>asdasd</td><td>asdasdasd</td></tr>
-            </table>
-          </td>
-          <td>asdasdasd</td>
-          <td>asdasdasd</td>
-        </tr>
-        <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-      </table>
   </section>
 
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -127,8 +121,7 @@
   <script>
     $(function(){
       $('#edit').froalaEditor({
-        enter: $.FroalaEditor.ENTER_P,
-        tabSpaces: 0
+        tableResizerOffset: 10
       })
     });
   </script>
