--- a/html/textarea.html
+++ b/html/textarea.html
@@ -30,7 +30,10 @@
 <body>
   <div id="editor">
     <form>
-      <textarea id='edit' style="margin-top: 30px;" placeholder="Type some text"></textarea>
+      <textarea id='edit' style="margin-top: 30px;" placeholder="Type some text">
+        <h1>Textarea</h1>
+        <p>The editor can also be initialized on a textarea.</p>
+      </textarea>
 
       <input type="submit">
     </form>
