--- a/html/core.html
+++ b/html/core.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../css/froala_editor.css">
   <link rel="stylesheet" href="../css/froala_style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 
   <style>
       body {
@@ -25,62 +24,40 @@
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-        <h1>Click and edit</h1>
+        <h1>Core Features</h1>
 
-        <img class="fr-fir" src="../img/photo1.jpg" alt="Old Clock" width="300"/>Lorem <strong>ipsum</strong> dolor sit amet, consectetur <strong>adipiscing <em>elit.</em> Donec</strong> facilisis diam in odio iaculis blandit. Nunc eu mauris sit amet purus <strong>viverra</strong><em> gravida</em> ut a dui.<br/>
+        <p>In this example the editor contains only core features. These are builtin functionalities of the editor, with no additional plugins.</p>
+
+        <img class="fr-fir" src="../img/photo1.jpg" alt="Old Clock" width="300"/>
 
         <ul><li>Vivamus nec rutrum augue, pharetra faucibus purus. Maecenas non orci sagittis, vehicula lorem et, dignissim nunc.</li> <li>Suspendisse suscipit, diam non varius facilisis, enim libero tincidunt magna, sit amet iaculis eros libero sit amet eros. Vestibulum a rhoncus felis.<ol><li>Nam lacus nulla, consequat ac lacus sit amet, accumsan pellentesque risus. Aenean viverra mi at urna mattis fermentum.</li> <li>Curabitur porta metus in tortor elementum, in semper nulla ullamcorper. Vestibulum mattis tempor tortor quis gravida. In rhoncus risus nibh. Nullam condimentum dapibus massa vel fringilla. Sed hendrerit sed est quis facilisis. Ut sit amet nibh sem. Pellentesque imperdiet mollis libero.</li></ol></li></ul>
 
         <table style="width: 100%;">
           <tr>
-            <td>asdasd</td>
-            <td>
+            <td style="width: 25%;">asdasd</td>
+            <td style="width: 25%;">
               <table style="width: 100%;">
-                <tr><td>asdasd</td><td>asdasdasd</td></tr>
-                <tr><td>asdasd</td><td>asdasdasd</td></tr>
-                <tr><td>asdasd</td><td>asdasdasd</td></tr>
+                <tr><td style="width: 50%;">asdasd</td><td style="width: 50%;">asdasdasd</td></tr>
+                <tr><td style="width: 50%;">asdasd</td><td style="width: 50%;">asdasdasd</td></tr>
+                <tr><td style="width: 50%;">asdasd</td><td style="width: 50%;">asdasdasd</td></tr>
               </table>
             </td>
-            <td>asdasdasd</td>
-            <td>asdasdasd</td>
+            <td style="width: 25%;">asdasdasd</td>
+            <td style="width: 25%;">asdasdasd</td>
           </tr>
           <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
         </table>
 
         <a href="http://google.com" title="Aenean sed hendrerit">Aenean sed hendrerit</a> velit. Nullam eu mi dolor. Maecenas et erat risus. Nulla ac auctor diam, non aliquet ante. Fusce ullamcorper, ipsum id tempor lacinia, sem tellus malesuada libero, quis ornare sem massa in orci. Sed dictum dictum tristique. Proin eros turpis, ultricies eu sapien eget, ornare rutrum ipsum. Pellentesque eros nisl, ornare nec ipsum sed, aliquet sollicitudin erat. Nulla tincidunt porta <strong>vehicula.</strong><br/>
-
-        <i>Nullam laoreet</i> imperdiet orci ac euismod. Curabitur vel lectus nisi. Phasellus accumsan aliquet augue, eu rutrum tellus iaculis in. Nunc viverra ultrices mollis. Curabitur malesuada nunc massa, ut imperdiet arcu lobortis sed. Cras ac arcu mauris. Maecenas id lectus nisl. Donec consectetur scelerisque quam at ultricies. Nam quis magna iaculis, condimentum metus ut, elementum metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus id tempus nisi.<br/>
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pretium efficitur lectus, porttitor ornare dolor luctus eu. Vivamus auctor nunc non vestibulum tempor. Integer tristique massa sit amet mi auctor euismod. In finibus nec purus et volutpat. Nullam consectetur est id lorem posuere, quis blandit eros dignissim. Curabitur fringilla iaculis est sed porttitor. Duis in nisi felis.
-
-        Suspendisse ex sem, eleifend vitae felis eu, finibus malesuada odio. Duis eget risus in sem facilisis venenatis eget nec turpis. Aliquam ac sapien dictum, tempor libero sed, feugiat odio. Mauris bibendum nisi justo, eu pulvinar neque tempor ac. Vivamus suscipit in elit interdum euismod. Etiam porta molestie lobortis. Nam consectetur malesuada ante non sagittis. Nunc nec odio ex. Duis non hendrerit diam. Integer vulputate, mi a gravida pretium, ligula libero laoreet libero, in vestibulum arcu velit at velit.
-
-        Suspendisse at neque commodo, sollicitudin lectus sed, blandit sem. Curabitur pharetra suscipit elit ac ultrices. Quisque ullamcorper quis massa et fringilla. Donec euismod, metus id porttitor semper, tortor velit accumsan metus, ut malesuada risus elit eu lorem. Mauris magna odio, efficitur et elit eu, suscipit fermentum sapien. Donec lacinia aliquet augue eu convallis. Suspendisse tincidunt lacus ac ipsum mattis malesuada. Curabitur pellentesque nec nulla ut commodo. Suspendisse pretium nunc in risus iaculis dignissim. Donec faucibus tempus lectus, vel ultrices lectus tincidunt et. Mauris pulvinar ut est in iaculis. Maecenas facilisis enim nec pharetra mattis. Aliquam laoreet egestas lacus, et porta nisl. Ut euismod laoreet purus sed eleifend. Vivamus ullamcorper sodales arcu, sit amet accumsan augue placerat semper. Duis condimentum mattis nulla sed consequat.
-
-        <table style="width: 100%;">
-          <tr><th>asdasd</th><th>asdasdasd</th><th>asdasdasd</th><th>asdasdasd</th></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-        </table>
-
-        Sed dictum dictum tristique. Proin eros turpis, ultricies eu sapien eget, ornare rutrum ipsum. Pellentesque eros nisl, ornare nec ipsum sed, aliquet sollicitudin erat. Nulla tincidunt porta <strong>vehicula.</strong><br/>
-
-
       </div>
   </section>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
   <script src="../js/froala_editor.min.js"></script>
 
   <script>
     $(function(){
-      $('#edit').froalaEditor({
-        enter: $.FroalaEditor.ENTER_P
-      })
+      $('#edit').froalaEditor()
     });
   </script>
 </body>
