--- a/html/image_manager.html
+++ b/html/image_manager.html
@@ -28,7 +28,9 @@
 <body>
   <section id="editor">
       <div id='edit' style="margin-top: 30px;">
-        <h1>Click and edit</h1>
+        <h1>Image Manager</h1>
+
+        <p>The Image Manager will help you browse images from your server. You can either insert an image or try to replace an existing one and the "Browse" button will open the Image Manager.</p>
 
         <img class="fr-fir" src="../img/photo1.jpg" alt="Old Clock" width="300"/>Lorem <strong>ipsum</strong> dolor sit amet, consectetur <strong>adipiscing <em>elit.</em> Donec</strong> facilisis diam in odio iaculis blandit. Nunc eu mauris sit amet purus <strong>viverra</strong><em> gravida</em> ut a dui.<br/>
 
@@ -36,41 +38,20 @@
 
         <table style="width: 100%;">
           <tr>
-            <td>asdasd</td>
-            <td>
-              <table style="width: 100%;">
-                <tr><td>asdasd</td><td>asdasdasd</td></tr>
-                <tr><td>asdasd</td><td>asdasdasd</td></tr>
-                <tr><td>asdasd</td><td>asdasdasd</td></tr>
-              </table>
-            </td>
-            <td>asdasdasd</td>
-            <td>asdasdasd</td>
+            <td style="width: 25%;"></td>
+            <td style="width: 25%;"></td>
+            <td style="width: 25%;"></td>
+            <td style="width: 25%;"></td>
           </tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
+          <tr>
+            <td style="width: 25%;"></td>
+            <td style="width: 25%;"></td>
+            <td style="width: 25%;"></td>
+            <td style="width: 25%;"></td>
+          </tr>
         </table>
 
         <a href="http://google.com" title="Aenean sed hendrerit">Aenean sed hendrerit</a> velit. Nullam eu mi dolor. Maecenas et erat risus. Nulla ac auctor diam, non aliquet ante. Fusce ullamcorper, ipsum id tempor lacinia, sem tellus malesuada libero, quis ornare sem massa in orci. Sed dictum dictum tristique. Proin eros turpis, ultricies eu sapien eget, ornare rutrum ipsum. Pellentesque eros nisl, ornare nec ipsum sed, aliquet sollicitudin erat. Nulla tincidunt porta <strong>vehicula.</strong><br/>
-
-        <i>Nullam laoreet</i> imperdiet orci ac euismod. Curabitur vel lectus nisi. Phasellus accumsan aliquet augue, eu rutrum tellus iaculis in. Nunc viverra ultrices mollis. Curabitur malesuada nunc massa, ut imperdiet arcu lobortis sed. Cras ac arcu mauris. Maecenas id lectus nisl. Donec consectetur scelerisque quam at ultricies. Nam quis magna iaculis, condimentum metus ut, elementum metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus id tempus nisi.<br/>
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pretium efficitur lectus, porttitor ornare dolor luctus eu. Vivamus auctor nunc non vestibulum tempor. Integer tristique massa sit amet mi auctor euismod. In finibus nec purus et volutpat. Nullam consectetur est id lorem posuere, quis blandit eros dignissim. Curabitur fringilla iaculis est sed porttitor. Duis in nisi felis.
-
-        Suspendisse ex sem, eleifend vitae felis eu, finibus malesuada odio. Duis eget risus in sem facilisis venenatis eget nec turpis. Aliquam ac sapien dictum, tempor libero sed, feugiat odio. Mauris bibendum nisi justo, eu pulvinar neque tempor ac. Vivamus suscipit in elit interdum euismod. Etiam porta molestie lobortis. Nam consectetur malesuada ante non sagittis. Nunc nec odio ex. Duis non hendrerit diam. Integer vulputate, mi a gravida pretium, ligula libero laoreet libero, in vestibulum arcu velit at velit.
-
-        Suspendisse at neque commodo, sollicitudin lectus sed, blandit sem. Curabitur pharetra suscipit elit ac ultrices. Quisque ullamcorper quis massa et fringilla. Donec euismod, metus id porttitor semper, tortor velit accumsan metus, ut malesuada risus elit eu lorem. Mauris magna odio, efficitur et elit eu, suscipit fermentum sapien. Donec lacinia aliquet augue eu convallis. Suspendisse tincidunt lacus ac ipsum mattis malesuada. Curabitur pellentesque nec nulla ut commodo. Suspendisse pretium nunc in risus iaculis dignissim. Donec faucibus tempus lectus, vel ultrices lectus tincidunt et. Mauris pulvinar ut est in iaculis. Maecenas facilisis enim nec pharetra mattis. Aliquam laoreet egestas lacus, et porta nisl. Ut euismod laoreet purus sed eleifend. Vivamus ullamcorper sodales arcu, sit amet accumsan augue placerat semper. Duis condimentum mattis nulla sed consequat.
-
-        <table style="width: 100%;">
-          <tr><th>asdasd</th><th>asdasdasd</th><th>asdasdasd</th><th>asdasdasd</th></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-          <tr><td>asdasd</td><td>asdasdasd</td><td>asdasdasd</td><td>asdasdasd</td></tr>
-        </table>
-
-        Sed dictum dictum tristique. Proin eros turpis, ultricies eu sapien eget, ornare rutrum ipsum. Pellentesque eros nisl, ornare nec ipsum sed, aliquet sollicitudin erat. Nulla tincidunt porta <strong>vehicula.</strong><br/>
-
-
       </div>
   </section>
 
@@ -90,9 +71,7 @@
 
   <script>
     $(function(){
-      $('#edit').froalaEditor({
-        enter: $.FroalaEditor.ENTER_P
-      })
+      $('#edit').froalaEditor()
     });
   </script>
 </body>
