--- a/html/toolbar_offset_bottom.html
+++ b/html/toolbar_offset_bottom.html
@@ -44,8 +44,9 @@
 
 <body>
   <div id="editor">
-      <footer>
-      </footer>
+    <h1>Toolbar Offset Bottom</h1>
+
+    <p><strong>Scroll down to see how the sticky toolbar and offset works at the when the toolbar is at bottom of the editing box.</strong></p>
 
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pretium efficitur lectus, porttitor ornare dolor luctus eu. Vivamus auctor nunc non vestibulum tempor. Integer tristique massa sit amet mi auctor euismod. In finibus nec purus et volutpat. Nullam consectetur est id lorem posuere, quis blandit eros dignissim. Curabitur fringilla iaculis est sed porttitor. Duis in nisi felis.
 
@@ -93,22 +94,21 @@
 
       Curabitur sem purus, sagittis quis lorem ac, iaculis laoreet lacus. Fusce eleifend congue massa a ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sodales, tortor ut hendrerit lacinia, velit metus commodo libero, eu consequat est metus sit amet odio. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque eu sem vehicula, vulputate est sit amet, mattis nisi. Nullam consequat at turpis vitae pretium. Nulla risus velit, pharetra ac sollicitudin sed, volutpat nec felis.
 
-        <div id='edit' style="margin-bottom: 200px;">
-          <h1>Click and edit</h1>
+        <div id='edit' style="margin-bottom: 200px; margin-top: 30px;">
+          <h1>Toolbar Offset Bottom</h1>
+
+          <p>This example is a combination of both Toolbar Offset and Toolbar Bottom examples.</p>
+
+          <p>The <a href="https://www.froala.com/wysiwyg-editor/v2.0/docs/options#toolbarStickyOffset" title="toolbarStickyOffset option" target="_blank">toolbarStickyOffset</a> option also works when <a href="https://www.froala.com/wysiwyg-editor/v2.0/docs/options#toolbarBottom" title="toolbarBottom option" target="_blank">toolbarBottom</a> option is set to <code>true</code>. In this case the offset is relative to the bottom of the page.</p>
 
           <img class="fr-fir fr-dii" src="../img/photo1.jpg" alt="Old Clock" width="300"/>Lorem <strong>ipsum</strong> dolor sit amet, consectetur <strong>adipiscing <em>elit.</em> Donec</strong> facilisis diam in odio iaculis blandit. Nunc eu mauris sit amet purus <strong>viverra</strong><em> gravida</em> ut a dui.<br/>
           <ul><li>Vivamus nec rutrum augue, pharetra faucibus purus. Maecenas non orci sagittis, vehicula lorem et, dignissim nunc.</li> <li>Suspendisse suscipit, diam non varius facilisis, enim libero tincidunt magna, sit amet iaculis eros libero sit amet eros. Vestibulum a rhoncus felis.<ol><li>Nam lacus nulla, consequat ac lacus sit amet, accumsan pellentesque risus. Aenean viverra mi at urna mattis fermentum.</li> <li>Curabitur porta metus in tortor elementum, in semper nulla ullamcorper. Vestibulum mattis tempor tortor quis gravida. In rhoncus risus nibh. Nullam condimentum dapibus massa vel fringilla. Sed hendrerit sed est quis facilisis. Ut sit amet nibh sem. Pellentesque imperdiet mollis libero.</li></ol></li></ul>
 
-          <table style="width: 100%;">
-            <tr><td>asdasd</td><td>asdasdasd</td></tr>
-          </table>
-
-          Sed dictum dictum tristique. Proin eros turpis, ultricies eu sapien eget, ornare rutrum ipsum. Pellentesque eros nisl, ornare nec ipsum sed, aliquet sollicitudin erat. Nulla tincidunt porta <strong>vehicula.</strong><br/>
-
           <a href="http://google.com" title="Aenean sed hendrerit">Aenean sed hendrerit</a> velit. Nullam eu mi dolor. Maecenas et erat risus. Nulla ac auctor diam, non aliquet ante. Fusce ullamcorper, ipsum id tempor lacinia, sem tellus malesuada libero, quis ornare sem massa in orci. Sed dictum dictum tristique. Proin eros turpis, ultricies eu sapien eget, ornare rutrum ipsum. Pellentesque eros nisl, ornare nec ipsum sed, aliquet sollicitudin erat. Nulla tincidunt porta <strong>vehicula.</strong><br/>
-
-          <i>Nullam laoreet</i> imperdiet orci ac euismod. Curabitur vel lectus nisi. Phasellus accumsan aliquet augue, eu rutrum tellus iaculis in. Nunc viverra ultrices mollis. Curabitur malesuada nunc massa, ut imperdiet arcu lobortis sed. Cras ac arcu mauris. Maecenas id lectus nisl. Donec consectetur scelerisque quam at ultricies. Nam quis magna iaculis, condimentum metus ut, elementum metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus id tempus nisi.<br/>
         </div>
+
+    <footer>
+    </footer>
   </div>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -138,12 +138,10 @@
   <script type="text/javascript" src="../js/plugins/save.min.js"></script>
   <script type="text/javascript" src="../js/plugins/fullscreen.min.js"></script>
   <script type="text/javascript" src="../js/plugins/quote.min.js"></script>
-  <script type="text/javascript" src="../js/languages/ro.js"></script>
 
   <script>
     $(function(){
       $('#edit').froalaEditor({
-        enter: $.FroalaEditor.ENTER_P,
         toolbarStickyOffset: 100,
         toolbarBottom: true
       })
