--- a/html/two_instances.html
+++ b/html/two_instances.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../css/froala_editor.css">
   <link rel="stylesheet" href="../css/froala_style.css">
+  <link rel="stylesheet" href="../css/plugins/code_view.css">
+  <link rel="stylesheet" href="../css/plugins/colors.css">
+  <link rel="stylesheet" href="../css/plugins/emoticons.css">
+  <link rel="stylesheet" href="../css/plugins/image_manager.css">
   <link rel="stylesheet" href="../css/plugins/image.css">
+  <link rel="stylesheet" href="../css/plugins/line_breaker.css">
+  <link rel="stylesheet" href="../css/plugins/table.css">
+  <link rel="stylesheet" href="../css/plugins/char_counter.css">
+  <link rel="stylesheet" href="../css/plugins/video.css">
+  <link rel="stylesheet" href="../css/plugins/fullscreen.css">
+  <link rel="stylesheet" href="../css/plugins/file.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 
   <style>
       body {
@@ -23,38 +34,60 @@
 
 <body>
   <section id="editor">
-      <div id='edit1' style="margin-top: 30px;">
-        test
-      </div>
+    <h1>Two Editor Instances</h1>
 
-      <div id='edit' style="margin-top: 30px;">
-        <h1>Click and edit</h1>
+    <p>The first instance should have a higher <a href="https://www.froala.com/wysiwyg-editor/v2.0/docs/options#zIndex" title="zIndex option" target="_blank">zIndex</a> than the second one.</p>
 
-        <img class="fr-fir" src="../img/photo1.jpg" alt="Old Clock" width="300"/>Lorem <strong>ipsum</strong> dolor sit amet, consectetur <strong>adipiscing <em>elit.</em> Donec</strong> facilisis diam in odio iaculis blandit. Nunc eu mauris sit amet purus <strong>viverra</strong><em> gravida</em> ut a dui. Vivamus nec rutrum augue, pharetra faucibus purus. Maecenas non orci sagittis, vehicula lorem et, dignissim nunc. Suspendisse suscipit, diam non varius facilisis, enim libero tincidunt magna, sit amet iaculis eros libero sit amet eros. Vestibulum a rhoncus felis. Nam lacus nulla, consequat ac lacus sit amet, accumsan pellentesque risus. Aenean viverra mi at urna mattis fermentum. Curabitur porta metus in tortor elementum, in semper nulla ullamcorper. Vestibulum mattis tempor tortor quis gravida. In rhoncus risus nibh. Nullam condimentum dapibus massa vel fringilla. Sed hendrerit sed est quis facilisis. Ut sit amet nibh sem. Pellentesque imperdiet mollis libero.<br/><br/>
+    <div id='edit1' style="margin-top: 30px;">
+      <img class="fr-fir fr-dii" src="../img/photo1.jpg" alt="Old Clock" width="150"/>
+      <h3>This is the first editor instance</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec facilisis diam in odio iaculis blandit. Nunc eu mauris sit amet purus viverra gravida ut a dui.</p>
+    </div>
 
-        <table style="width: 100%;">
-          <tr><td>asdasd</td><td>asdasdasd</td></tr>
-        </table>
-
-        <a href="http://google.com" title="Aenean sed hendrerit">Aenean sed hendrerit</a> velit. Nullam eu mi dolor. Maecenas et erat risus. Nulla ac auctor diam, non aliquet ante. Fusce ullamcorper, ipsum id tempor lacinia, sem tellus malesuada libero, quis ornare sem massa in orci. Sed dictum dictum tristique. Proin eros turpis, ultricies eu sapien eget, ornare rutrum ipsum. Pellentesque eros nisl, ornare nec ipsum sed, aliquet sollicitudin erat. Nulla tincidunt porta <strong>vehicula.</strong><br/>
-
-        <i>Nullam laoreet</i> imperdiet orci ac euismod. Curabitur vel lectus nisi. Phasellus accumsan aliquet augue, eu rutrum tellus iaculis in. Nunc viverra ultrices mollis. Curabitur malesuada nunc massa, ut imperdiet arcu lobortis sed. Cras ac arcu mauris. Maecenas id lectus nisl. Donec consectetur scelerisque quam at ultricies. Nam quis magna iaculis, condimentum metus ut, elementum metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus id tempus nisi.<br/>
-      </div>
+    <div id='edit' style="margin-top: 30px;">
+      <img class="fr-fir fr-dii" src="../img/photo1.jpg" alt="Old Clock" width="150"/>
+      <h3>This is the second editor instance</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec facilisis diam in odio iaculis blandit. Nunc eu mauris sit amet purus viverra gravida ut a dui.</p>
+    </div>
   </section>
 
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="../js/froala_editor.min.js"></script>
-  <script src="../js/plugins/image.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
+
+  <script type="text/javascript" src="../js/froala_editor.min.js" ></script>
+
+  <script type="text/javascript" src="../js/plugins/align.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/code_view.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/colors.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/emoticons.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/font_size.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/font_family.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/image.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/file.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/image_manager.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/line_breaker.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/link.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/lists.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/paragraph_format.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/paragraph_style.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/video.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/table.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/url.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/entities.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/char_counter.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/inline_style.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/save.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/fullscreen.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/quote.min.js"></script>
 
   <script>
     $(function(){
       $('#edit').froalaEditor({
-        enter: $.FroalaEditor.ENTER_P,
         zIndex: 4000
       })
 
       $('#edit1').froalaEditor({
-        enter: $.FroalaEditor.ENTER_P,
         zIndex: 4001
       })
     });
