Fixes Font Family example.

--- a/html/font_family.html
+++ b/html/font_family.html
@@ -49,10 +49,10 @@
     $(function() {
       $('div#edit').froalaEditor({
         fontFamily: {
-          "'Roboto', sans-serif": 'Roboto',
-          "'Oswald', sans-serif": 'Oswald',
-          "'Montserrat', sans-serif": 'Montserrat',
-          "'Open Sans Condensed', sans-serif": 'Open Sans Condensed'
+          "Roboto,sans-serif": 'Roboto',
+          "Oswald,sans-serif": 'Oswald',
+          "Montserrat,sans-serif": 'Montserrat',
+          "'Open Sans Condensed',sans-serif": 'Open Sans Condensed'
         },
         fontFamilySelection: true
       })
