Fixes br before table in line breaker example.

--- a/html/line_breaker.html
+++ b/html/line_breaker.html
@@ -40,8 +40,7 @@
           <tbody>
             <tr>
               <td style="width: 25%;"></td>
-              <td style="width: 25%;">
-                <table style="width: 100%;">
+              <td style="width: 25%;"><table style="width: 100%;">
                   <tbody>
                     <tr>
                       <td style="width: 50%;"></td>
