Fixes froala/wysiwyg-editor#799.

--- a/html/size/height.html
+++ b/html/size/height.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../../css/froala_editor.css">
   <link rel="stylesheet" href="../../css/froala_style.css">
   <link rel="stylesheet" href="../../css/plugins/code_view.css">
+  <link rel="stylesheet" href="../../css/plugins/char_counter.css">
   <link rel="stylesheet" href="../../css/plugins/image.css">
   <link rel="stylesheet" href="../../css/plugins/video.css">
   <link rel="stylesheet" href="../../css/plugins/table.css">
@@ -50,6 +51,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
   <script src="../../js/froala_editor.min.js"></script>
   <script src="../../js/plugins/code_view.min.js"></script>
+  <script src="../../js/plugins/char_counter.min.js"></script>
   <script src="../../js/plugins/font_size.min.js"></script>
   <script src="../../js/plugins/align.min.js"></script>
   <script src="../../js/plugins/font_family.min.js"></script>
