Clean HTML examples.

--- a/html/boostrap/modal.html
+++ b/html/boostrap/modal.html
@@ -115,7 +115,7 @@
   <script type="text/javascript" src="../../js/languages/ro.js"></script>
 
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <script>
     $(function(){
