--- a/html/core.html
+++ b/html/core.html
@@ -53,7 +53,7 @@
   </section>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="../js/froala_editor.min.js"></script>
+  <script type="text/javascript" src="../js/froala_editor.min.js"></script>
 
   <script>
     $(function(){
