--- a/html/emoticons.html
+++ b/html/emoticons.html
@@ -45,16 +45,17 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
-  <script src="../js/froala_editor.min.js"></script>
-  <script src="../js/plugins/code_view.min.js"></script>
-  <script src="../js/plugins/font_size.min.js"></script>
-  <script src="../js/plugins/font_family.min.js"></script>
-  <script src="../js/plugins/paragraph_style.min.js"></script>
-  <script src="../js/plugins/lists.min.js"></script>
-  <script src="../js/plugins/image.min.js"></script>
-  <script src="../js/plugins/link.min.js"></script>
-  <script src="../js/plugins/video.min.js"></script>
-  <script src="../js/plugins/emoticons.min.js"></script>
+  <script type="text/javascript" src="../js/froala_editor.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/code_beautifier.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/code_view.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/font_size.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/font_family.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/paragraph_style.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/lists.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/image.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/link.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/video.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/emoticons.min.js"></script>
 
   <script>
     $(function(){
