--- a/html/line_breaker.html
+++ b/html/line_breaker.html
@@ -87,9 +87,9 @@
   </section>
 
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="../js/froala_editor.min.js"></script>
-  <script src="../js/plugins/line_breaker.min.js"></script>
-   <script src="../js/plugins/table.min.js"></script>
+  <script type="text/javascript" src="../js/froala_editor.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/line_breaker.min.js"></script>
+   <script type="text/javascript" src="../js/plugins/table.min.js"></script>
 
   <script>
     $(function() {
