--- a/html/size/min_height.html
+++ b/html/size/min_height.html
@@ -42,7 +42,7 @@
   </section>
 
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="../../js/froala_editor.min.js"></script>
+  <script type="text/javascript" src="../../js/froala_editor.min.js"></script>
 
   <script>
     $(function(){
