Correct Boostrap lists example.

--- a/html/boostrap/lists.html
+++ b/html/boostrap/lists.html
@@ -44,7 +44,7 @@
 
 <body>
   <div id="editor">
-      <textarea id='edit'><div style="margin: 0 15px;">
+      <textarea id='edit'>
           <ul class="list-group">
             <li class="list-group-item">Cras justo odio</li>
             <li class="list-group-item">Dapibus ac facilisis in</li>
