Fixes back in inline and image/video would not show the editor.

--- a/html/SweetDay/index.html
+++ b/html/SweetDay/index.html
@@ -228,7 +228,7 @@
     <script>
       var opts = {
         toolbarInline: true,
-        toolbarButtons: ['bold', 'italic', 'underline', 'paragraphFormat'],
+        toolbarButtons: ['bold', 'italic', 'underline', 'paragraphFormat', 'insertLink', 'insertImage', 'insertVideo', 'insertTable', 'insertFile'],
         initOnClick: true,
         enter: $.FroalaEditor.ENTER_BR
       };
