Add table helper and quick insert plugin. Review image insert.

--- a/html/iframe.html
+++ b/html/iframe.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="../css/plugins/table.css">
   <link rel="stylesheet" href="../css/plugins/char_counter.css">
   <link rel="stylesheet" href="../css/plugins/video.css">
+  <link rel="stylesheet" href="../css/plugins/quick_insert.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 
   <style>
@@ -84,6 +85,7 @@
   <script type="text/javascript" src="../js/plugins/char_counter.min.js"></script>
   <script type="text/javascript" src="../js/plugins/inline_style.min.js"></script>
   <script type="text/javascript" src="../js/plugins/save.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/quick_insert.min.js"></script>
 
   <script>
     $(function(){
