--- a/html/toolbar_inline.html
+++ b/html/toolbar_inline.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="../css/plugins/image_manager.css">
   <link rel="stylesheet" href="../css/plugins/image.css">
   <link rel="stylesheet" href="../css/plugins/line_breaker.css">
+  <link rel="stylesheet" href="../css/plugins/quick_insert.css">
   <link rel="stylesheet" href="../css/plugins/table.css">
   <link rel="stylesheet" href="../css/plugins/file.css">
   <link rel="stylesheet" href="../css/plugins/char_counter.css">
@@ -77,6 +78,7 @@
   <script type="text/javascript" src="../js/plugins/image.min.js"></script>
   <script type="text/javascript" src="../js/plugins/image_manager.min.js"></script>
   <script type="text/javascript" src="../js/plugins/line_breaker.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/quick_insert.min.js"></script>
   <script type="text/javascript" src="../js/plugins/link.min.js"></script>
   <script type="text/javascript" src="../js/plugins/lists.min.js"></script>
   <script type="text/javascript" src="../js/plugins/paragraph_format.min.js"></script>
