--- a/html/full.html
+++ b/html/full.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="../css/plugins/char_counter.css">
   <link rel="stylesheet" href="../css/plugins/video.css">
   <link rel="stylesheet" href="../css/plugins/fullscreen.css">
+  <link rel="stylesheet" href="../css/plugins/quick_insert.css">
   <link rel="stylesheet" href="../css/plugins/file.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 
@@ -139,6 +140,7 @@
   <script type="text/javascript" src="../js/plugins/save.min.js"></script>
   <script type="text/javascript" src="../js/plugins/fullscreen.min.js"></script>
   <script type="text/javascript" src="../js/plugins/quote.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/quick_insert.min.js"></script>
 
   <script>
     $(function(){
