Create separate plugin for dragging.

--- a/html/full.html
+++ b/html/full.html
@@ -121,10 +121,11 @@
   <script type="text/javascript" src="../js/plugins/code_view.min.js"></script>
   <script type="text/javascript" src="../js/plugins/colors.min.js"></script>
   <script type="text/javascript" src="../js/plugins/emoticons.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/draggable.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/file.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_size.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_family.min.js"></script>
   <script type="text/javascript" src="../js/plugins/image.min.js"></script>
-  <script type="text/javascript" src="../js/plugins/file.min.js"></script>
   <script type="text/javascript" src="../js/plugins/image_manager.min.js"></script>
   <script type="text/javascript" src="../js/plugins/line_breaker.min.js"></script>
   <script type="text/javascript" src="../js/plugins/link.min.js"></script>
