--- a/html/init_destroy.html
+++ b/html/init_destroy.html
@@ -72,6 +72,7 @@
   <script type="text/javascript" src="../js/plugins/align.min.js"></script>
   <script type="text/javascript" src="../js/plugins/code_beautifier.min.js"></script>
   <script type="text/javascript" src="../js/plugins/code_view.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/draggable.min.js"></script>
   <script type="text/javascript" src="../js/plugins/image.min.js"></script>
   <script type="text/javascript" src="../js/plugins/image_manager.min.js"></script>
   <script type="text/javascript" src="../js/plugins/link.min.js"></script>
