--- a/html/require_js/index.html
+++ b/html/require_js/index.html
@@ -48,7 +48,7 @@
   <script data-main="js/app" src="js/lib/require.js"></script>
   <script>
     // Froala Editor plugins list.
-    var fe_plugins = ['align', 'char_counter', 'code_view', 'colors', 'emoticons',
+    var fe_plugins = ['align', 'char_counter', 'code_view', 'colors', 'draggable', 'emoticons',
                       'entities', 'file', 'font_family', 'font_size', 'fullscreen',
                       'image_manager', 'image', 'inline_style', 'line_breaker',
                       'link', 'lists', 'paragraph_format', 'paragraph_style', 'quote',
