--- a/html/colors.html
+++ b/html/colors.html
@@ -51,6 +51,7 @@
   <script type="text/javascript" src="../js/plugins/code_beautifier.min.js"></script>
   <script type="text/javascript" src="../js/plugins/code_beautifier.min.js"></script>
   <script type="text/javascript" src="../js/plugins/code_view.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/draggable.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_size.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_family.min.js"></script>
   <script type="text/javascript" src="../js/plugins/paragraph_style.min.js"></script>
