--- a/html/language.html
+++ b/html/language.html
@@ -69,6 +69,7 @@
   <script type="text/javascript" src="../js/plugins/code_beautifier.min.js"></script>
   <script type="text/javascript" src="../js/plugins/code_view.min.js"></script>
   <script type="text/javascript" src="../js/plugins/colors.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/draggable.min.js"></script>
   <script type="text/javascript" src="../js/plugins/emoticons.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_size.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_family.min.js"></script>
