Quick insert redesign, tooltip and translation. Add table insert helper tooltip.

--- a/html/language.html
+++ b/html/language.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="../css/plugins/video.css">
   <link rel="stylesheet" href="../css/plugins/fullscreen.css">
   <link rel="stylesheet" href="../css/plugins/file.css">
+  <link rel="stylesheet" href="../css/plugins/quick_insert.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 
   <style>
@@ -90,6 +91,7 @@
   <script type="text/javascript" src="../js/plugins/save.min.js"></script>
   <script type="text/javascript" src="../js/plugins/fullscreen.min.js"></script>
   <script type="text/javascript" src="../js/plugins/quote.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/quick_insert.min.js"></script>
   <script type="text/javascript" src="../js/languages/ro.js"></script>
 
   <script>
