Fixes froala/wysiwyg-editor#1071.

--- a/html/iframe.html
+++ b/html/iframe.html
@@ -94,7 +94,8 @@
   <script>
     $(function(){
       $('#edit').froalaEditor({
-        iframe: true
+        iframe: true,
+        useClasses: false
       })
     });
   </script>
