Update iframe example.

--- a/html/iframe.html
+++ b/html/iframe.html
@@ -94,8 +94,7 @@
   <script>
     $(function(){
       $('#edit').froalaEditor({
-        iframe: true,
-        useClasses: false
+        iframe: true
       })
     });
   </script>
