--- a/html/toolbar_inline_two.html
+++ b/html/toolbar_inline_two.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="../css/plugins/code_view.css">
   <link rel="stylesheet" href="../css/plugins/colors.css">
   <link rel="stylesheet" href="../css/plugins/emoticons.css">
+  <link rel="stylesheet" href="../css/plugins/file.css">
   <link rel="stylesheet" href="../css/plugins/image_manager.css">
   <link rel="stylesheet" href="../css/plugins/image.css">
   <link rel="stylesheet" href="../css/plugins/line_breaker.css">
   <link rel="stylesheet" href="../css/plugins/table.css">
-  <link rel="stylesheet" href="../css/plugins/char_counter.css">
   <link rel="stylesheet" href="../css/plugins/video.css">
   <link rel="stylesheet" href="../css/plugins/fullscreen.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
@@ -61,6 +61,7 @@
   <script type="text/javascript" src="../js/plugins/colors.min.js"></script>
   <script type="text/javascript" src="../js/plugins/draggable.min.js"></script>
   <script type="text/javascript" src="../js/plugins/emoticons.min.js"></script>
+  <script type="text/javascript" src="../js/plugins/file.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_size.min.js"></script>
   <script type="text/javascript" src="../js/plugins/font_family.min.js"></script>
   <script type="text/javascript" src="../js/plugins/image.min.js"></script>
@@ -74,7 +75,6 @@
   <script type="text/javascript" src="../js/plugins/table.min.js"></script>
   <script type="text/javascript" src="../js/plugins/url.min.js"></script>
   <script type="text/javascript" src="../js/plugins/entities.min.js"></script>
-  <script type="text/javascript" src="../js/plugins/char_counter.min.js"></script>
   <script type="text/javascript" src="../js/plugins/inline_style.min.js"></script>
   <script type="text/javascript" src="../js/plugins/save.min.js"></script>
   <script type="text/javascript" src="../js/plugins/fullscreen.min.js"></script>
