Fixes froala/wysiwyg-editor#1108.

--- a/html/boostrap/modal.html
+++ b/html/boostrap/modal.html
@@ -39,6 +39,12 @@
       .modal-body {
         height: 500px;
       }
+
+      .modal-dialog {
+        transform : none !important;
+        -webkit-transform : none !important;
+        -moz-transform : none !important;
+      }
   </style>
 </head>
 
