Show toolbar inline on iOS and Android.

--- a/html/toolbar_inline_two.html
+++ b/html/toolbar_inline_two.html
@@ -83,7 +83,10 @@
     $(function(){
       $('#edit, #edit2').froalaEditor({
         toolbarInline: true,
-        toolbarButtons: ['bold', 'italic', 'underline', 'strikeThrough', 'color', 'emoticons', '-', 'paragraphFormat', 'align', 'formatOL', 'formatUL', 'indent', 'outdent', '-', 'insertImage', 'insertLink', 'insertFile', 'insertVideo', 'undo', 'redo']
+        toolbarButtons: ['bold', 'italic', 'underline', 'strikeThrough', 'color', 'emoticons', '-', 'paragraphFormat', 'align', 'formatOL', 'formatUL', 'indent', 'outdent', '-', 'insertImage', 'insertLink', 'insertFile', 'insertVideo', 'undo', 'redo'],
+        toolbarButtonsXS: null,
+        toolbarButtonsSM: null,
+        toolbarButtonsMD: null
       })
     });
   </script>
