Rethink applying format. froala/wysiwyg-editor#1211 froala/wysiwyg-editor#1221.

--- a/html/full.html
+++ b/html/full.html
@@ -30,6 +30,10 @@
           margin: auto;
           text-align: left;
       }
+
+      .ss {
+        background-color: red;
+      }
   </style>
 </head>
 
