Fixes froala/wysiwyg-editor#1259.

--- a/html/themes/gray_theme.html
+++ b/html/themes/gray_theme.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="../../css/plugins/char_counter.css">
   <link rel="stylesheet" href="../../css/plugins/video.css">
   <link rel="stylesheet" href="../../css/plugins/fullscreen.css">
+  <link rel="stylesheet" href="../../css/plugins/quick_insert.css">
   <link rel="stylesheet" href="../../css/plugins/file.css">
 
   <link rel="stylesheet" href="../../css/themes/gray.css">
@@ -81,6 +82,7 @@
   <script type="text/javascript" src="../../js/plugins/entities.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/char_counter.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/inline_style.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/quick_insert.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/save.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/fullscreen.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/quote.min.js"></script>
