Fixes full example.

--- a/html/popular/full.html
+++ b/html/popular/full.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../../css/froala_editor.css">
   <link rel="stylesheet" href="../../css/froala_style.css">
   <link rel="stylesheet" href="../../css/plugins/code_view.css">
-  <link rel="stylesheet" href="../css/plugins/draggable.css">
+  <link rel="stylesheet" href="../../css/plugins/draggable.css">
   <link rel="stylesheet" href="../../css/plugins/colors.css">
   <link rel="stylesheet" href="../../css/plugins/emoticons.css">
   <link rel="stylesheet" href="../../css/plugins/image_manager.css">
