Create modals module.

--- a/html/popular/full.html
+++ b/html/popular/full.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../../css/plugins/fullscreen.css">
   <link rel="stylesheet" href="../../css/plugins/file.css">
   <link rel="stylesheet" href="../../css/plugins/quick_insert.css">
+  <link rel="stylesheet" href="../../css/plugins/help.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 
   <style>
@@ -146,6 +147,7 @@
   <script type="text/javascript" src="../../js/plugins/save.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/url.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/video.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/help.min.js"></script>
 
   <script>
     $(function(){
